# rust-projects

./: README.md
rust-chat-server/: Cargo.toml
rust-chat-server/src/: main.rs
rust-file-structure-test/: Cargo.toml
rust-file-structure-test/src/: main.rs
rust-file-structure-test/src/controller/: mod.rs
rust-file-structure-test/src/models/: admin_model.rs  mod.rs  user_model.rs
rust-web-scraper/: Cargo.toml  dump.rdb
rust-web-scraper/src/: main.rs  routes.rs
rust-web-scraper/src/api/: mod.rs  scrape_api.rs
rust-web-scraper/src/apis/: health_check_api.rs  mod.rs  scrape_api.rs
rust-web-scraper/src/data_models/: health_check_model.rs  mod.rs
rust-web-scraper/src/database/: mod.rs
rust-web-scraper/src/redis/: redis_client.rs
