[package]
name = "rust-web-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dotenv
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
# actix server
actix = "0.13"
actix-cors = "0.6.4"
actix-web = "4"
env_logger = "0.10.0"
#redis
redis = "0.22.3"
# diesel
diesel = { version = "2.0.0", features = ["r2d2","sqlite"] }
#serde
serde = {version  = "^1", features = ["derive"]}
